Added PlayerVsComputerController. Fixed score of attempt in single player